feat: 2/3 of requirement 8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  "workbench.colorTheme": "Dracula",
-  "workbench.preferredDarkColorTheme": "Dracula At Night",
+  "workbench.colorTheme": "One Dark Pro",
   "workbench.preferredLightColorTheme": "Visual Studio Dark"
 }
