--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +34,6 @@
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "eslint": "6.8.0",
     "eslint-config-trybe-frontend": "1.2.0",
     "eslint-plugin-babel": "^5.3.1",
     "stylelint": "^13.8.0",
